--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -140,10 +140,12 @@ fetch('api/v1/landmarks')
 //make map
    map = L.map('mapid',{layers: [museumMarkers, theaterMarkers, parkMarkers, governmentMarkers]}).setView([39.7392358, -104.990251], 15)
    map.addControl(new locateButton());
-  L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
   attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
   maxZoom: 18,
-  id: 'mapbox.streets',
+  zoomOffset: -1,
+  tileSize: 512,
+  id: 'mapbox/streets-v11',
   accessToken: '<%=ENV['MAPBOX_API_KEY']%>'
   }).addTo(map);
   map.on('locationerror', onLocationError);
